[gd_scene load_steps=5 format=3 uid="uid://c2qvn71uqivdp"]

[ext_resource type="FontFile" uid="uid://dwblw0b46amqp" path="res://fonts/Teko-VariableFont_wght.ttf" id="1_xrclb"]
[ext_resource type="Script" path="res://scenes/user_interface/main_menu.gd" id="1_yh1nf"]

[sub_resource type="Gradient" id="Gradient_mopc4"]
interpolation_mode = 1
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a3q2x"]
gradient = SubResource("Gradient_mopc4")

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_yh1nf")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_a3q2x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.37
anchor_right = 0.7
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xrclb")
theme_override_font_sizes/font_size = 50
text = "START"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xrclb")
theme_override_font_sizes/font_size = 50
text = "CONTROLS: SHIT"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xrclb")
theme_override_font_sizes/font_size = 50
text = "QUIT
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
